// tag::header[]
[width=100%,cols="10%, 30%, 60%", frame=none, grid=rows, options="header"]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::ent-db[]
| 04/03/2024 | Database | New TR-4990: Quick Recovery of Oracle VLDB with Incremental Merge on ANF
// end::ent-db[]
// tag::ent-db[]
| 02/15/2024 | Database | New TR-4988: Oracle Database Backup, Recovery, and Clone on ANF with SnapCenter
// end::ent-db[]
// tag::ent-db[]
| 02/07/2024 | Database | New TR-4987: Simplified, Automated Oracle Deployment on Amazon FSx ONTAP with iSCSI
// end::ent-db[]
// tag::ent-db[]
| 12/18/2023 | Database | New TR-4986: Simplified, Automated Oracle Deployment on Amazon FSx ONTAP with iSCSI
// end::ent-db[]
// tag::rhhc[]
| 12/12/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new content for Azure Cloud
// end::rhhc[]
// tag::ent-db[]
| 12/07/2023 | Database | TR-4983: Simplified, Automated Oracle Deployment on NetApp ASA with iSCSI
// end::ent-db[]
// tag::ent-db[]
| 11/27/2023 | Database | TR-4979: Simplified, self-managed Oracle in VMware Cloud on AWS with guest-mounted FSx ONTAP
// end::ent-db[]
// tag::vmw-sc[]
| 11/07/2023 | Sovereign Cloud | New content: StorageGRID as an Object Store Extension
| 11/06/2023 | Sovereign Cloud | New content for VMware Sovereign Cloud with NetApp
// end::vmw-sc[]
// tag::aiml[]
| 10/11/2023 | AI | New solution: Hybrid Multicloud MLOps with Domino Data Lab and NetApp
// end::aiml[]
// tag::rhhc[]
| 10/10/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new content for Google Cloud
// end::rhhc[]
// tag::ent-db[]
| 09/29/2023 | Database | Added new TR-4981: Oracle Active Data Guard Cost Reduction with AWS FSx ONTAP
// end::ent-db[]
// tag::aiml[]
| 09/19/2023 | AI | Added whitepaper: Generative AI and NetApp Value
// end::aiml[]
// tag::hmc[]
| 08/17/2023 | Hybrid Cloud | Added: Using Veeam Replication and Azure NetApp Files datastore for disaster recovery to Azure VMware Solution 