@@ -83,7 +83,7 @@ git clone https://bitbucket.ngage.netapp.com/scm/ns-bb/na_oracle_clone_lifecycle
 
 ====
 
-The toolkit includes a hosts file which define the targets that an Ansible playbook running against. Usually, it is the target Oracle clone hosts. Following is an example file. A host entry includes target host IP address as well as ssh key for an admin user access to the host to execute clone refresh command.
+The toolkit includes a hosts file which define the targets that an Ansible playbook running against. Usually, it is the target Oracle clone hosts. Following is an example file. A host entry includes target host IP address as well as ssh key for an admin user access to the host to execute clone or refresh command.
 
 #Oracle clone hosts
 
@@ -100,7 +100,7 @@ The toolkit includes a hosts file which define the targets that an Ansible playb
 [%collapsible]
 
 ====
-The Ansible playbooks are variables driven. Below is an example global variable file vars.yml.
+The Ansible playbooks take variable inputs from several variable files. Below is an example global variable file vars.yml.
 
  # ONTAP specific config variables    
 
@@ -158,7 +158,7 @@ Clone target Oracle server should have the same Oracle software stack as source 
 
  # User specific environment and startup programs
  export ORACLE_BASE=/u01/app/oracle
- export ORACLE_HOME=/u01/app/oracle/product/19.0.0/NTAP3
+ export ORACLE_HOME=/u01/app/oracle/product/19.0.0/NTAP1
 
 
 ====
