@@ -134,6 +134,8 @@ entries:
       
   - title: "SnapCenter for Databases"
     entries:
+      - title: "SnapCenter Oracle Clone Lifecycle"
+        url: /databases/automation_ora_clone_lifecycle.html
       - title: "Oracle Database Backup, Recovery, and Clone on ANF"
         url: /databases/snapctr_ora_azure_anf.html
       - title: "BlueXP SaaS for Oracle - Azure"
