@@ -4,6 +4,9 @@
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
 // tag::ent-db[]
+| 04/17/2024 | Database | SnapCenter Oracle Clone Lifecycle Automation
+// end::ent-db[]
+// tag::ent-db[]
 | 04/03/2024 | Database | New TR-4990: Quick Recovery of Oracle VLDB with Incremental Merge on ANF
 // end::ent-db[]
 // tag::ent-db[]
